--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
         "outDir": "./dist",
         "rootDir": "."
     },
-    "files": ["src/index.ts"]
+    "files": ["src/dots-game/index.ts"]
 }
